fixed scrollbar

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -120,7 +120,16 @@ nav div p {
 }
 
 @media (min-width: 450px) {
-    nav div {
-        z-index: 998;
+    ::-webkit-scrollbar {
+        width: 12px; 
+    }
+    
+    ::-webkit-scrollbar-thumb {
+        background-color: var(--border-color); 
+        border-radius: 10px;
+    }
+    
+    ::-webkit-scrollbar-thumb:hover {
+        background-color: var(--yellow-color); 
     }
 }
